--- a/tools/icon-transform-svg/package.json
+++ b/tools/icon-transform-svg/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "7.7.1",
     "@babel/preset-react": "7.7.0",
     "jest": "^26.6.3",
+    "jest": "^26.6.3",
     "cheerio": "1.0.0-rc.3",
     "fs-extra": "8.1.0",
     "glob": "7.1.4",
