--- a/semcore/wizard/package.json
+++ b/semcore/wizard/package.json
@@ -13,7 +13,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/utils": "^3.15"
+    "@semcore/utils": "^3.15",
+    "@semcore/flex-box": "^4",
+    "@semcore/icon": "^2.16",
+    "@semcore/typography": "^4"
   },
   "peerDependencies": {
     "@semcore/core": "^1.8.3",
