--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -39,7 +39,7 @@ jobs:
             */*/node_modules
             website/node_modules
           key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
-      - name: Сache build
+      - name: Cache build
         uses: actions/cache@v2
         id: cache-build
         with:
