--- a/semcore/wizard/package.json
+++ b/semcore/wizard/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@semcore/utils": "^3.15",
     "@semcore/flex-box": "^4",
-    "@semcore/icon": "^2.16"
+    "@semcore/icon": "^2.16",
+    "@semcore/modal": "^3"
   },
   "peerDependencies": {
     "@semcore/core": "^1.8.3",
