--- a/semcore/d3-chart/package.json
+++ b/semcore/d3-chart/package.json
@@ -19,12 +19,12 @@
     "@semcore/utils": "^3.15",
     "@upsetjs/venn.js": "1.4.1",
     "d3-array": "3.1.6",
-    "d3-shape": "3.1.0",
-    "d3-scale": "3.3.0",
     "d3-interpolate": "3.0.1",
+    "d3-scale": "3.3.0",
+    "d3-shape": "3.1.0",
     "d3-transition": "3.0.1",
-    "resize-observer-polyfill": "1.5.1",
-    "hoist-non-react-statics": "3.3.2"
+    "hoist-non-react-statics": "3.3.2",
+    "resize-observer-polyfill": "1.5.1"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
@@ -39,14 +39,14 @@
     "directory": "semcore/d3-chart"
   },
   "devDependencies": {
-    "@semcore/jest-preset-ui": "1.0.0",
-    "@types/d3-array": "^3.0.2",
-    "@types/d3-scale": "^4.0.2",
-    "@types/d3-transition": "^3.0.1",
-    "@semcore/typography": "*",
-    "@semcore/dropdown-menu": "*",
     "@semcore/button": "*",
     "@semcore/checkbox": "*",
-    "@semcore/icon": "*"
+    "@semcore/dropdown-menu": "*",
+    "@semcore/icon": "*",
+    "@semcore/jest-preset-ui": "1.0.0",
+    "@semcore/typography": "*",
+    "@types/d3-array": "^3.0.2",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-transition": "^3.0.1"
   }
 }
