--- a/semcore/wizard/package.json
+++ b/semcore/wizard/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@semcore/wizard",
   "description": "SEMRush Wizard Component",
-  "version": "1.0.0-0",
+  "version": "1.0.0",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
   "typings": "lib/types/index.d.ts",
