--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint:ts": "tsc --project tsconfig.json --noEmit",
     "lint": "yarn lint:ts && yarn lint:es",
     "prettier:fix": "pretty-quick --staged --ignore-path=./.prettierignore",
-    "preinstall": "node ./.ci/update-workspaces-list"
+    "preinstall": "node ./.ci/update-workspaces-list",
+    "publish:website": "tsm ./.ci/trigger-website-publish.ts"
   },
   "private": true,
   "workspace-sources": {
