--- a/tools/playground/package.json
+++ b/tools/playground/package.json
@@ -19,20 +19,21 @@
     "esbuild": "0.14.29",
     "file-loader": "4.0.0",
     "fps-emitter": "1.0.0",
+    "picocolors": "1.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "5.3.5",
     "tsm": "2.2.1"
   },
   "devDependencies": {
+    "@semcore/core": "*",
+    "@semcore/errors": "*",
+    "@semcore/icon": "*",
     "@semcore/jest-preset-ui": "1.0.0",
     "@types/jest": "27.4.1",
     "babel-plugin-tester": "7.0.1",
     "fast-glob": "3.2.11",
-    "jest": "26.6.3",
-    "@semcore/core": "*",
-    "@semcore/errors": "*",
-    "@semcore/icon": "*"
+    "jest": "26.6.3"
   },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
