--- a/website/package.json
+++ b/website/package.json
@@ -61,6 +61,7 @@
     "mdast-util-to-hast": "12.1.1",
     "micromark-extension-gfm": "2.0.1",
     "node-watch": "0.7.3",
+    "picocolors": "1.0.0",
     "postcss": "8.4.14",
     "tsm": "2.2.1",
     "typescript": "4.1.3",
