--- a/semcore/ui/package.json
+++ b/semcore/ui/package.json
@@ -9,76 +9,78 @@
     "test": "jest"
   },
   "dependencies": {
-    "@semcore/accordion": "3.5.4",
-    "@semcore/animation": "1.5.0",
-    "@semcore/badge": "2.3.7",
-    "@semcore/base-trigger": "2.6.3",
-    "@semcore/breadcrumbs": "2.6.3",
-    "@semcore/breakpoints": "1.1.4",
-    "@semcore/button": "3.3.7",
-    "@semcore/card": "3.0.5",
-    "@semcore/carousel": "1.6.2",
-    "@semcore/chart": "4.3.12",
-    "@semcore/checkbox": "5.2.8",
-    "@semcore/core": "1.11.4",
-    "@semcore/counter": "1.3.2",
-    "@semcore/d3-chart": "1.9.0",
-    "@semcore/data-table": "2.2.4",
-    "@semcore/date-picker": "2.8.3",
-    "@semcore/divider": "2.2.5",
-    "@semcore/dot": "3.0.5",
-    "@semcore/drag-and-drop": "1.0.3",
-    "@semcore/dropdown": "2.3.3",
-    "@semcore/dropdown-menu": "2.3.12",
+    "@semcore/accordion": "4.0.6",
+    "@semcore/animation": "1.5.4",
+    "@semcore/badge": "3.0.4",
+    "@semcore/base-trigger": "3.0.7",
+    "@semcore/breadcrumbs": "3.0.7",
+    "@semcore/breakpoints": "1.1.8",
+    "@semcore/button": "4.0.7",
+    "@semcore/card": "4.0.7",
+    "@semcore/carousel": "2.0.6",
+    "@semcore/chart": "5.1.1",
+    "@semcore/checkbox": "6.0.6",
+    "@semcore/core": "1.11.8",
+    "@semcore/counter": "2.0.4",
+    "@semcore/d3-chart": "2.2.1",
+    "@semcore/data-table": "3.0.10",
+    "@semcore/date-picker": "3.0.9",
+    "@semcore/divider": "3.0.4",
+    "@semcore/dot": "4.0.7",
+    "@semcore/drag-and-drop": "2.0.7",
+    "@semcore/dropdown": "3.0.5",
+    "@semcore/dropdown-menu": "3.0.5",
     "@semcore/email": "1.0.1",
-    "@semcore/errors": "2.5.6",
-    "@semcore/feature-popover": "2.6.4",
-    "@semcore/feedback-form": "4.0.5",
-    "@semcore/flags": "2.2.5",
-    "@semcore/flex-box": "4.5.1",
-    "@semcore/format-text": "2.3.1",
-    "@semcore/fullscreen-modal": "1.6.3",
-    "@semcore/grid": "4.1.4",
-    "@semcore/icon": "2.20.0",
-    "@semcore/inline-edit": "1.0.0",
-    "@semcore/inline-input": "2.0.0",
-    "@semcore/input": "2.2.5",
-    "@semcore/input-mask": "3.2.3",
-    "@semcore/input-number": "3.0.6",
-    "@semcore/input-tags": "2.5.2",
-    "@semcore/link": "3.5.2",
-    "@semcore/modal": "2.4.7",
-    "@semcore/neighbor-location": "2.3.5",
-    "@semcore/notice": "3.2.5",
-    "@semcore/notice-bubble": "3.3.5",
-    "@semcore/outside-click": "2.4.3",
-    "@semcore/pagination": "2.5.0",
-    "@semcore/pills": "3.5.5",
-    "@semcore/popper": "4.11.17",
-    "@semcore/portal": "2.3.3",
-    "@semcore/product-head": "2.2.5",
-    "@semcore/progress-bar": "2.3.1",
-    "@semcore/project-create": "4.0.6",
-    "@semcore/radio": "4.2.6",
-    "@semcore/scroll-area": "3.7.1",
-    "@semcore/select": "2.7.10",
-    "@semcore/side-panel": "1.3.6",
-    "@semcore/skeleton": "3.2.1",
-    "@semcore/slider": "2.0.3",
-    "@semcore/spin": "3.4.1",
-    "@semcore/spin-container": "5.1.0",
-    "@semcore/sticky": "2.2.3",
-    "@semcore/switch": "3.4.1",
-    "@semcore/tab-line": "2.9.1",
-    "@semcore/tab-panel": "2.6.6",
-    "@semcore/table": "2.5.4",
-    "@semcore/tag": "3.7.1",
-    "@semcore/textarea": "3.2.7",
-    "@semcore/time-picker": "2.4.14",
-    "@semcore/tooltip": "4.3.5",
-    "@semcore/typography": "3.4.2",
-    "@semcore/utils": "3.31.2",
-    "@semcore/widget-empty": "2.7.0"
+    "@semcore/errors": "3.1.1",
+    "@semcore/feature-popover": "3.0.7",
+    "@semcore/feedback-form": "5.1.2",
+    "@semcore/flags": "3.0.4",
+    "@semcore/flex-box": "4.5.6",
+    "@semcore/format-text": "3.0.4",
+    "@semcore/fullscreen-modal": "2.0.8",
+    "@semcore/grid": "4.1.8",
+    "@semcore/icon": "2.28.0",
+    "@semcore/illustration": "1.0.1",
+    "@semcore/inline-edit": "2.0.4",
+    "@semcore/inline-input": "3.0.10",
+    "@semcore/input": "3.0.6",
+    "@semcore/input-mask": "4.0.6",
+    "@semcore/input-number": "4.0.6",
+    "@semcore/input-tags": "3.0.7",
+    "@semcore/link": "4.0.7",
+    "@semcore/modal": "3.0.7",
+    "@semcore/neighbor-location": "2.3.9",
+    "@semcore/notice": "4.1.3",
+    "@semcore/notice-bubble": "4.0.6",
+    "@semcore/notice-global": "1.1.1",
+    "@semcore/outside-click": "2.4.7",
+    "@semcore/pagination": "3.0.9",
+    "@semcore/pills": "4.1.1",
+    "@semcore/popper": "4.11.22",
+    "@semcore/portal": "2.3.7",
+    "@semcore/product-head": "3.0.4",
+    "@semcore/progress-bar": "3.0.5",
+    "@semcore/project-create": "5.1.1",
+    "@semcore/radio": "5.0.5",
+    "@semcore/scroll-area": "4.0.4",
+    "@semcore/select": "3.0.9",
+    "@semcore/side-panel": "2.0.7",
+    "@semcore/skeleton": "4.0.4",
+    "@semcore/slider": "3.0.4",
+    "@semcore/spin": "4.0.4",
+    "@semcore/spin-container": "6.0.4",
+    "@semcore/sticky": "2.2.7",
+    "@semcore/switch": "4.0.3",
+    "@semcore/tab-line": "3.0.3",
+    "@semcore/tab-panel": "3.0.3",
+    "@semcore/table": "3.0.7",
+    "@semcore/tag": "4.0.7",
+    "@semcore/textarea": "4.0.5",
+    "@semcore/time-picker": "3.0.11",
+    "@semcore/tooltip": "5.0.5",
+    "@semcore/typography": "4.0.7",
+    "@semcore/utils": "3.34.0",
+    "@semcore/widget-empty": "3.2.0"
   },
   "devDependencies": {
     "fast-glob": "3.2.11",
