--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "yarn lint:ts && yarn lint:es",
     "prettier:fix": "pretty-quick --staged --ignore-path=./.prettierignore",
     "preinstall": "node ./.ci/update-workspaces-list",
-    "publish:website": "tsm ./.ci/trigger-website-publish.ts"
+    "publish:website": "tsm ./.ci/trigger-website-publish.ts",
+    "prepare": "husky install"
   },
   "private": true,
   "workspace-sources": {
@@ -46,7 +47,8 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-ssr-friendly": "1.1.0",
-    "husky": "3.0.0",
+    "execa": "6.1.0",
+    "husky": "8.0.0",
     "jest": "26.6.3",
     "lerna": "4.0.0",
     "lint-staged": "10.2.9",
@@ -60,12 +62,6 @@
   },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn prettier:fix && lint-staged",
-      "commit-msg": "tsm ./.ci/lint-commit-message.ts $HUSKY_GIT_PARAMS"
-    }
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": "eslint --fix"
