--- a/semcore/input-number/package.json
+++ b/semcore/input-number/package.json
@@ -13,8 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@semcore/input": "^3.0.0",
     "@semcore/utils": "^3.15",
-    "@semcore/input": "^3.0.0"
+    "lodash": "4.17.21"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
