--- a/semcore/input-number/package.json
+++ b/semcore/input-number/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "@semcore/input": "^3.0.0",
-    "@semcore/utils": "^3.15",
-    "lodash": "4.17.21"
+    "@semcore/utils": "^3.15"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
