--- a/tools/babel-plugin-styles/package.json
+++ b/tools/babel-plugin-styles/package.json
@@ -13,6 +13,7 @@
     "chokidar": "3.5.1",
     "css-selector-tokenizer": "0.7.3",
     "cssnano": "4.1.10",
+    "find-package-json": "1.2.0",
     "fs-extra": "9.1.0",
     "postcss": "8.2.8",
     "postcss-color-mod-function": "3.0.3",
